[gd_scene load_steps=4 format=2]

[ext_resource path="res://VisualAutoShooter.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Combat/NewTurretBarrel.tscn" type="PackedScene" id=2]
[ext_resource path="res://SFX/Weapons/LaserShot.mp3" type="AudioStream" id=3]

[node name="VisualAutoShooter" type="Node2D" groups=["Proccesing", "Timed"]]
script = ExtResource( 1 )
barrel_scene = ExtResource( 2 )

[node name="BarrelDissappearTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="BarrelAppearTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -12.235
bus = "SFX"

[connection signal="timeout" from="BarrelDissappearTimer" to="." method="_on_BarrelDissappearTimer_timeout"]
[connection signal="timeout" from="BarrelAppearTimer" to="." method="_on_BarrelAppearTimer_timeout"]
